<resources>
    <string name="app_name">Assginment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_meals">My Meals</string>
    <string name="nearby">Nearby</string>
    <string name="profile">Profile</string>
    <string name="search_for_meals_chefs_and_more">Search for meals, chefs and more</string>
    <string name="hello_john">Hello, John!</string>
    <string name="work">Work</string>
    <string name="biryani">Biryani</string>
    <string name="dinner">Dinner</string>
    <string name="arriving_8_30_pm">Arriving : 8:30 pm</string>
    <string name="edit"><u>Edit</u></string>
    <string name="my_next_meal">MY NEXT MEAL</string>
    <string name="subscriptions">SUBSCRIPTIONS</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="popular_meals">POPULAR MEALS</string>
    <string name="offers_just_for_you">OFFERS JUST FOR YOU</string>
    <string name="starts_from_rs">Starts from Rs </string>
    <string name="only">only</string>
    <string name="add">Add</string>
    <string name="quick_grab">Quick Grab</string>
    <string name="skip_128078">SKIP 👎</string>
    <string name="add_128077">ADD 👍</string>
    <string name="want_healthy">WANT HEALTHY ?</string>
</resources>