<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cl_my_next_meal"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/line1"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@color/search_bar"/>

        <TextView
            android:id="@+id/tv_my_next_meal"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/my_next_meal"
            android:textColor="@color/text_color"
            android:textSize="14dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/line2"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/search_bar"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_my_next_meal">

        <androidx.cardview.widget.CardView
            android:id="@+id/ll_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_my_next_meal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/food1"
                android:scaleType="fitXY"
                android:visibility="visible"/>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:gravity="start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_image"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_my_next_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|start"
                android:fontFamily="@font/poppins"
                android:text="@string/biryani"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_my_next_meal_type"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|start"
                android:fontFamily="@font/poppins"
                android:text="@string/dinner"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_my_next_meal_arriving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:fontFamily="@font/poppins"
                android:text="@string/arriving_8_30_pm"
                android:textColor="@color/text_color"
                android:textSize="16dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tv_my_next_meal_edit"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginBottom="1dp"
            android:gravity="center|start"
            android:fontFamily="@font/poppins"
            android:text="@string/edit"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>